--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   "license": "MIT",
   "node-red": {
     "nodes": {
-      "socket-io-config": "./dist/nodes/socket-io-config/socket-io-config.js"
+      "socket-io-config": "./dist/nodes/socket-io-config/socket-io-config.js",
+      "socket-io-out": "./dist/nodes/socket-io-out/socket-io-out.js"
     }
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
+    "@types/mustache": "^4.2.6",
     "@types/node": "^22.15.29",
     "@types/node-red": "^1.1.1",
     "@types/node-red-node-test-helper": "^0.3.4",
@@ -43,7 +45,7 @@
     "eslint-plugin-prettier": "^5.4.1",
     "glob": "^11.0.2",
     "jest": "^29.7.0",
-    "mustache": "^4.0.1",
+    "mustache": "^4.2.0",
     "node-red": "^4.0.9",
     "node-red-node-test-helper": "^0.3.4",
     "onchange": "^7.0.2",
@@ -63,5 +65,8 @@
     "testMatch": [
       "**/__tests__/**/*.test.ts"
     ]
+  },
+  "dependencies": {
+    "socket.io-client": "^4.8.1"
   }
 }
