--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     }
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/express": "^5.0.2",
