--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,7 +106,7 @@ jobs:
           commit: 'chore(release): version packages'
           title: 'chore(release): version packages'
           version: node .github/changeset-version.js
-          publish: pnpm ci:publish
+          publish: pnpm release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
