--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ env:
   CI: true
 
 jobs:
-  build:
+  release:
     name: "node-red-contrib-real-socket-io-client"
     runs-on: ubuntu-latest
     permissions:
@@ -57,53 +57,15 @@ jobs:
           commit: 'chore(release): version packages'
           title: 'chore(release): version packages'
           version: node .github/changeset-version.js
-          publish: npx changeset publish
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Auto-merge release PR
-        if: steps.changesets.outputs.pullRequestNumber != ''
-        run: |
-          gh pr merge ${{ steps.changesets.outputs.pullRequestNumber }} --squash --delete-branch
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  publish:
-    needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      packages: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-
-      - name: Enable Corepack
-        run: npm install -g pnpm
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Pull latest changes
-        run: |
-          git pull origin main
-
-      - name: Publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          # run: |
-          #   git checkout main
-          #   git pull origin main
-          commit: 'chore(release): version packages'
-          title: 'chore(release): version packages'
-          version: node .github/changeset-version.js
+          # publish: npx changeset publish
           publish: pnpm release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Auto-merge release PR
+      #   if: steps.changesets.outputs.pullRequestNumber != ''
+      #   run: |
+      #     gh pr merge ${{ steps.changesets.outputs.pullRequestNumber }} --squash --delete-branch
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
