--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-red-contrib-real-socket-io-client",
   "version": "1.0.2",
   "description": "Real socket-io client for Node-RED",
+  "type": "module",
   "scripts": {
     "add-node": "node ./utils/add-node.js",
     "copy": "copyfiles -u 2 \"./src/nodes/**/*.{png,svg}\" \"./dist/nodes/\"",
